# topic_classification

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml  streamlit_run.py  tox.ini
configs/: train.yaml
src/: __main__.py
src/Callbacks/: clearml.py  clearml_module.py  debug.py
src/ConstantsConfigs/: config.py  constants.py
src/DataPrep/: class_balance.py  datamodule.py  dataset.py  labels_enc_dec.py  load_data_df.py  transform.py
src/Inference/: streamlit_class.py
src/Loggers/: loggers.py
src/Metrics/: metrics.py
src/NN/: nn_model.py  schedulers.py  serialization_module.py
