[tool.poetry]
name = "topic-classification-vciom"
version = "0.1.0"
description = ""
authors = ["anatoly <t.vlasov23@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wemake-python-styleguide = "^0.18.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"
torch = {version = "^2.0.1+cu118", source = "pytorch-gpu-src"}
pydantic = "^2.6.4"
black = "^24.3.0"
clearml = "^1.14.4"
omegaconf = "^2.3.0"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
transformers = "^4.38.2"
lightning = {version = "2.1", extras = ["extra"]}
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
